-
Bug
-
Resolution: Done
-
P0: Blocker
-
None
-
5.5.1, 5.6.0 Alpha
-
None
When closing a menu from the menu bar, the application crashes on iOS.
- is required for
-
QTBUG-47958 Issues to be fixed before Qt 5.6.0 Beta
-
- Closed
-
| For Gerrit Dashboard: QTBUG-49365 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 140593,3 | qquickmenu: don't dismiss a native menu from __dismissAndDestroy | 5.6 | qt/qtquickcontrols | Status: MERGED | +2 | 0 |