qquickmenu: don't dismiss a native menu from __dismissAndDestroy

Task-number: QTBUG-49365
Change-Id: I34509ce9d961f0afb5c2f935af6dc4e574c39a77
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@theqtcompany.com>
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@theqtcompany.com>